# LockFree-SPMC-Queue-Distribution-System

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  run_demo.sh
docs/: DESIGN.md
include/: Consumer.h  LatencyTracker.h  Message.h  Producer.h  Queue.h  SharedMemoryManager.h  Utils.h  WaitStrategy.h
src/: demo_single_process.cpp  main.cpp
tests/: test_queue.cpp
